# Hexlet_projects

./: README.md
python-project-lvl1/: .travis.yml  Makefile  README.md  pyproject.toml
python-project-lvl1/brain_games/: cli.py  engine.py
python-project-lvl1/brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
python-project-lvl1/brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
python-project-lvl2/: .travis.yml  Makefile  README.md  pyproject.toml
python-project-lvl2/gendiff/: cli.py  engine.py  formatters.py  parsers.py
python-project-lvl2/gendiff/scripts/: gendiff.py
python-project-lvl2/tests/: test_gendiff_json.py  test_gendiff_nested.py  test_gendiff_plain.py  test_gendiff_yml.py
