[tool.poetry]
name = "DoroninDobro_gendiff"
version = "0.8.0"
description = ""
authors = ["Doronin Vovka <Doronindobro@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

